welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: too many arguments for method colonne: (D: Array[java.awt.Color])Unit
    colonne(d,D)
           ^Array2:32: error: not found: value n
    D(pas)=T((pas + n)%(getMondeHauteur()))
                    ^